fix: adjust spacing on help text, update help text font

--- a/src/components/HintExpander/HintExpander.css
+++ b/src/components/HintExpander/HintExpander.css
@@ -41,4 +41,5 @@
   margin-left: 2px;
   border-left: 2px solid #284162;
   color: #5c5c5c;
+  font-family: "Noto Sans";
 }
